--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -23,3 +23,6 @@ testing-postgresql = "^1.3.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
